fix: fixing layout bugs

--- a/shelter/assets/sass/blocks/_header.scss
+++ b/shelter/assets/sass/blocks/_header.scss
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: space-between;
     padding-left: 42px;
-    margin-right: 0;
     .logo {
         text-align: center;
         &__title {
